[EM] Convert to Org
gnu-core-utilities.md > *.org

--- a/spices/gnu-core-utilities.org
+++ b/spices/gnu-core-utilities.org
@@ -1,64 +1,64 @@
-<!--
-File          : gnu-core-utilities.md
-Created       : Wed 14 Oct 2015 23:07:41
-Last Modified : Wed 07 Sep 2016 23:32:00 sharlatan
-Maintainer    : sharlatan
--->
+# File          : gnu-core-utilities.md
+# Created       : Wed 14 Oct 2015 23:07:41
+# Last Modified : Fri 14 Oct 2016 21:47:56 sharlatan
+# Maintainer    : sharlatan
 
-[[≣](../README.md#Index "Index")]
-[[↷](https://www.gnu.org/software/coreutils/coreutils.html)]
+[[../README.md#Index "Index"][|≣|]][[https://www.gnu.org/software/coreutils/coreutils.html][↷|]]
 
-GNU core utilities
-------------------
-|     |     |
-| --- | --- |
-| __Author__ | |
-| __Maintainers__ | |
-| __Realised__ | |
-| __Source__ | [coreutils.git](http://git.savannah.gnu.org/cgit/coreutils.git) |
-| __Info__ | [GNU Coreutils](http://www.gnu.org/software/coreutils/manual/coreutils.html) |
+#+TITLE: GNU core utilities
+
+|-----------------+---------------|
+| __Author__      |               |
+|-----------------+---------------|
+| __Maintainers__ |               |
+| __Realised__    |               |
+| __Source__      | [[http://git.savannah.gnu.org/cgit/coreutils.git][coreutils.git]] |
+| __Info__        | [[http://www.gnu.org/software/coreutils/manual/coreutils.html][GNU Coreutils]] |
+|-----------------+---------------|
 
 The GNU Core Utilities are the basic file, shell and text manipulation
 utilities of the  GNU operating system.  These are  the core utilities
 which are expected  to exist on every operating  system.  This package
 is the union of the GNU fileutils, sh-utils, and textutils packages.
 
-## Installation ##
+* Installation
 
 This package is installed on most  of Linux distributions but in case
 of missing you can install it manually
 
-### On Linux ###
-__rpm__ _RedHat, CentOS, Fedora, Scientific Linux_
+** Linux
+*** rpm
+RedHat, CentOS, Fedora, Scientific Linux
 
+#+BEGIN_EXAMPLE
     $: yum [dnf] search coreutils
     $: sudo yum install coreutils
+#+END_EXAMPLE
 
-__deb__ _Debian, Ubuntu, Linux Mint_
+*** deb
+Debian, Ubuntu, Linux Mint
 
+#+BEGIN_EXAMPLE
     $: sudo apt-get install coreutils
+#+END_EXAMPLE
 
----
+-----
 
+* Commands
+#+BEGIN_EXAMPLE
     cp (1)        - copy files and directories
-
-[dd](gnu-core-utilities.md#dd) (1)  - convert and copy a file
-
+    dd (1)        - convert and copy a file
     df (1)        - report file system disk space usage
     du (1)        - estimate file space usage
     id (1)        - print real and effective user and group IDs
     ln (1)        - make links between files
-
-[ls](gnu-core-utilities.md#ls) (1) - list directory contents
-
+    ls (1)        - list directory contents
     mv (1)        - move (rename) files
     nl (1)        - number lines of files
     od (1)        - dump files in octal and other formats
     pr (1)        - convert text files for printing
     rm (1)        - remove files or directories
-
-[tr](gnu-core-utilities.md#tr) (1) - translate or delete characters
-
+    tr (1)        - translate or delete characters
     wc (1)        - print newline, word, and byte counts for each file
 
     cat (1)       - concatenate files and print on the standard output
@@ -156,9 +156,12 @@ __deb__ _Debian, Ubuntu, Linux Mint_
     sha256sum (1) - compute and check SHA256 message digest
     sha384sum (1) - compute and check SHA384 message digest
     sha512sum (1) - compute and check SHA512 message digest
+#+END_EXAMPLE
+
+-----
 
 [[⬆]](#top)
-### dd ###
+** dd
 
 Test NFS/LAN speed
 
@@ -169,25 +172,27 @@ After creating 256Mb file on your remote server, read it back
     $: time dd if=/<mount_of_your_nfs_dir>/tesfile of=/dev/null bs=16k
 
 [[⬆]](#top)
-### ls ###
-_ls [-aAlbBCdDfFghHiIklLmNopqQrRsStTuvwxXZ1] [FILE/DIRECTORY]_
+** ls
+: ls [-aAlbBCdDfFghHiIklLmNopqQrRsStTuvwxXZ1] [FILE/DIRECTORY]
 
-Sweet examples of using __ls__.
-
+Sweet examples of using *ls*
+#+BEGIN_EXAMPLE
     $: ls -Rotti
     $: ls -Ham
     $: ls -and
     $: ls -alSh
+#+END_EXAMPLE
 
 List only: Dir, files, links;  hidden dirs, hidden files hidden links,
 exec files. Actively using -F key to classify */=>@|
-
+#+BEGIN_EXAMPLE
     $: ls -F | grep '/' | cut -d/ -f1
     $: ls -p | grep -v /
     $: ls -F | grep '[@]' | cut -d@ -f1
+#+END_EXAMPLE
 
 Aliases best practice.
-
+#+BEGIN_EXAMPLE
     alias ls="ls -1p --color=auto"
     alias l="ls -lhGgo"
     alias ll="ls -lh"
@@ -198,11 +203,11 @@ Aliases best practice.
     alias lhead="ls -lhGgo | head"
     alias ltail="ls -lhGgo | tail"
     alias lmore='ls -lhGgo | more'
-
+#+END_EXAMPLE
 
 [[⬆]](#top)
-### tr ###
-_tr [-cdstdts]... SET1 [SET2]_
+** tr
+: tr [-cdstdts]... SET1 [SET2]
 
 "convert" Mac ASCII file to UNIX.
 
@@ -217,8 +222,8 @@ Turn spaces into newlines:
     tr ' ' '\012' < file
 
 
-***
+------
 [[⬆]](#top)
-## Reference ##
+* Reference
 - Jerry Peek, Shelley Powers, Tim O'Reilly, Mike Loukides. *UNIX Power Tools*. O'reilly
 - Ellen Siever, Stepben Figgins, Robert Love & Arnold Robbins. *Linux In a Nutshell*. O'reilly
