--- a/spices/gnu-core-utilities.org
+++ b/spices/gnu-core-utilities.org
@@ -1,6 +1,6 @@
 # File          : gnu-core-utilities.md
 # Created       : Wed 14 Oct 2015 23:07:41
-# Last Modified : Sat 29 Oct 2016 10:30:41 sharlatan
+# Last Modified : Sat 29 Oct 2016 10:51:59 sharlatan
 # Maintainer    : sharlatan
 
 #+OPTIONS: num:nil
@@ -24,13 +24,13 @@ utilities of the  GNU operating system.  These are  the core utilities
 which are expected  to exist on every operating  system.  This package
 is the union of the GNU fileutils, sh-utils, and textutils packages.
 
-* Installation [[top][⬆]]
+** Installation
 
 This package is installed on most  of Linux distributions but in case
 of missing you can install it manually
 
-** Linux [[top][⬆]]
-*** rpm
+*** Linux
+**** rpm
 RedHat, CentOS, Fedora, Scientific Linux
 
 #+BEGIN_EXAMPLE
@@ -38,7 +38,7 @@ RedHat, CentOS, Fedora, Scientific Linux
     $: sudo yum install coreutils
 #+END_EXAMPLE
 
-*** deb
+**** deb
 Debian, Ubuntu, Linux Mint
 
 #+BEGIN_EXAMPLE
@@ -46,8 +46,8 @@ Debian, Ubuntu, Linux Mint
 #+END_EXAMPLE
 
 -----
-
-* Commands [[top][⬆]]
+[[top][⬆]]
+** Commands
 #+BEGIN_EXAMPLE
     cp (1)        - copy files and directories
     dd (1)        - convert and copy a file
@@ -161,8 +161,7 @@ Debian, Ubuntu, Linux Mint
     sha512sum (1) - compute and check SHA512 message digest
 #+END_EXAMPLE
 -----
-
-** dd [[top][⬆]]
+*** dd [[top][⬆]]
 
 Test NFS/LAN speed
 
@@ -172,7 +171,7 @@ After creating 256Mb file on your remote server, read it back
 
     $: time dd if=/<mount_of_your_nfs_dir>/tesfile of=/dev/null bs=16k
 
-** ls [[top][⬆]]
+*** ls [[top][⬆]]
 
 : ls [-aAlbBCdDfFghHiIklLmNopqQrRsStTuvwxXZ1] [FILE/DIRECTORY]
 
@@ -206,7 +205,6 @@ Aliases best practice.
     alias lmore='ls -lhGgo | more'
 #+END_EXAMPLE
 
-
-* Reference [[top][⬆]]
+** Reference
 - Jerry Peek, Shelley Powers, Tim O'Reilly, Mike Loukides. *UNIX Power Tools*. O'reilly
 - Ellen Siever, Stepben Figgins, Robert Love & Arnold Robbins. *Linux In a Nutshell*. O'reilly
