--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
-# File          : README.md
+# File          : README.org
 # Created       : Sat 07 Nov 2015 22:58:38
-# Last Modified : Sun 30 Oct 2016 17:49:18 sharlatan
+# Last Modified : <2016-11-04 Fri 22:59:50 GMT> sharlatan
 # Maintainer    : sharlatan <sharlatanus@gmail.com>
 # Short         :
 
@@ -11,8 +11,6 @@
 /Collectlion of unIX utilities tips/
 
 ** Intro
-
-/Everything is a file/
 
 The  aim of  this repo  is to  collect short  examples of  command usage,  to be
 helpful  for *nix  beginners and  interesting  place for  advanced users.   More
@@ -58,7 +56,6 @@ on *GNU/Linux*
     $: rpm -ql "$PACK" | grep -oP "(?<=\/usr\/bin\/).+" | less
 #+END_EXAMPLE
 
-on *GNU/Linux*
 
 ** Index
 /Make each program do one thing well/
@@ -77,13 +74,13 @@ on *GNU/Linux*
   + [[spices/get:: elp.org][get help]] :: You don't have know everything you must know how to use: help,
                 man, info
 
-- *File and Text Processing* /Everything is a file/
-  + [[][awk]] ::
-  + [[][sed/ed]] ::
-  + [[][vim]] ::
-  + [[][micro]] ::
-  + [[][nano]] ::
-  + [[][emacs]] ::
+- *File-text Processing* /Everything is a file/!
+  + [[./spices/cix-gawk.org][gawk]] :: The GNU version of the awk text processing utility
+  + [[./spices/cix-sed.org][sed/ed]] :: A GNU stream text editor
+  + [[./spices/cix-vim.org][vim-enchanced]] :: A version of the VIM editor which includes recent enhancements
+  + [[./spices/cix-micro.org][micro]] :: a modern and intuitive terminal-based text editor
+  + [[./spices/cix-nano.org][nano]] :: A small text editor
+  + [[./spices/cix-emacs.org][emacs]] :: GNU Emacs text editor
 
 - *File System* /Partition file system craft and check/
   + [[spices/lvm2.md][lvm2]] :: Userland logical volume management tools
@@ -91,7 +88,7 @@ on *GNU/Linux*
                  NFS server
   + [[spaces/curlftpfs.org][CurlFtpFS]] :: is a filesystem for accessing FTP hosts based on FUSE and
                  libcurl
-  + [[spices/linux_diskquota.md][quota]] :: System tools for monitoring users disk usage
+  + [[./spices/linux_diskquota.md][quota]] :: System tools for monitoring users disk usage
   + [[spices/e2fsprogs.md][E2fsprogs]] :: Filesystem utilities for use with Ext2/3/4.
   + [[spices/btrfs:: rogs.md][btrfs-progs]] :: Userspace programs for btrfs.
 
@@ -109,21 +106,22 @@ on *GNU/Linux*
 
 - *Hardware* /Hard as a Rock!/
   + [[./spices/kbd.org][kbd]] :: Tools for configuring the console (keyboard, virtual terminals, etc.)
+  + [[./spices/cix-smartmontools.org][smartmontools]] :: Tools for monitoring SMART capable hard disks
 
 - *Searching* /Loosing my religion/
   + [[./spices/gnu-grep.org][gnu-grep]] :: Pattern matching utilities
   + [[spices/gnu-findutils.md][gnu-findutils]] :: The GNU versions of find utilities (find and xargs)
-  + [[][ag]] :: Super-fast text searching tool - Silversearcher
-  + [[][ack]] ::
+  + [[./spices/cix-ag.org][ag]] :: Super-fast text searching tool - Silversearcher
+  + [[./spices/cix-ack.org][ack]] :: Grep-like text finder
 
 - *Archiving and Commpresion* /I'm a pac man/
-  + [[][gzip]] :: The GNU data compression program
-  + [[][gnu-tar]] :: A GNU file archiving program
-  + [[][cpio]] :: A GNU archiving program
-  + [[][lrzip]] :: Compression program optimized for large files
-  + [[][bzip2]] :: A file compression utility
-  + [[][xz]] :: LZMA compression utilities
-  + [[][pax]] :: POSIX File System Archiver
+  + [[./spices/cix-gzip.org][gzip]] :: The GNU data compression program
+  + [[./spices/cix-gnu-tar.org][gnu-tar]] :: A GNU file archiving program
+  + [[./spices/cix-cpio.org][cpio]] :: A GNU archiving program
+  + [[./spices/cix-lrzip.org][lrzip]] :: Compression program optimized for large files
+  + [[./spices/cix-bzip2.org][bzip2]] :: A file compression utility
+  + [[./spices/cix-xz.org][xz]] :: LZMA compression utilities
+  + [[./spices/cix-pax.org][pax]] :: POSIX File System Archiver
 
 - *Networking* /We all live in the someone's subnet in/
   + [[./spices/net-tools.org][net-tools]] :: collection of base networking utilities
@@ -136,27 +134,35 @@ on *GNU/Linux*
   + [[spices/bridge_utils.org][bridge-utils]] :: Utilities for configuring the linux ethernet bridge
   + [[spices/bind-utils.org][bind-utils]] :: utilities for querying DNS name server
   + [[./spices/cix-nmap.org][nmap]] :: Network exploration tool and security scanner
-  + [[][netcat]] ::
   + [[spaces/openssh.org][OpenSSH]] :: An open source implementation of SSH protocol versions 1 and 2
-  + [[][net-snmp]] :: A collection of SNMP protocol tools and libraries
+  + [[./spices/cix-net-snmp.org][net-snmp]] :: A collection of SNMP protocol tools and libraries
 
 - *Package management* /Pack me up, pack me down/
   + [[spices/pm_managers.md][Package managers utils]] :: PM comparison table and tricks.
 
 - *Shell* /Not just sand.../
   + [[spices/gnu-bash-builtin.md][gnu-bash-builtin]] :: GNU Bash shell built in commands
-  + [[http://fishshell.com/][fish]] ::
-  + screen ::
-  + tmux ::
-  + [[http://www.zsh.org/][zsh]] ::
+  + [[http://fishshell.com/][fish]] ::  A friendly interactive shell
+  + [[./spices/cix-screen.org][screen]] :: A screen manager that supports multiple logins on one terminal
+  + [[./spices/cix-tmux.org][tmux]] :: A terminal multiplexer
+  + [[http://www.zsh.org/][zsh]] ::  Powerful interactive shell
 
 - *Researcher* /I've got a clue!/
   + [[spices/netkit.md][Linux Netkit]] :: Utilities for managing processes on your system
 
 - *Cryptograpy* /Who break Enigma code?/
-  + [[][gpg]] ::
+  + [[./spices/cix-gpg.org][gnupg]] :: A GNU utility for secure communication and data storage
 
 ** Reference
+*** Books
+- Ellen Sieve, Stephen Figgins, Robert Love & Arnold Robbins
+  *LINUX in a nutshell 6th Edition*
+  O'reilly 2009
+*** Links
 - GNU Coreutils http://www.gnu.org/software/coreutils/manual/coreutils.html
-- Bioinformatics one-liners https://github.com/stephenturner/oneliners
 - Basics of the Unix Philosophy http://homepage.cs.uri.edu/~thenry/resources/unix_art/ch01s06.html
+- http://www.commandlinefu.com/commands/browse/sort-by-votes
+
+*** Hubs
+- Bioinformatics one-liners https://github.com/stephenturner/oneliners
+# End of README.org
