--- a/spices/cix-gnu-core-utilities.org
+++ b/spices/cix-gnu-core-utilities.org
@@ -4,11 +4,9 @@
 # Maintainer    : sharlatan
 
 #+OPTIONS: num:nil
-
 [[../README.md][|≣|]][[https://www.gnu.org/software/coreutils/coreutils.html][↷|]]
 
-<<top>>
-#+TITLE: GNU core utilities
+* GNU core utilities
 
 |-------------+---------------|
 | *Author*      |               |
@@ -46,7 +44,7 @@ Debian, Ubuntu, Linux Mint
 #+END_EXAMPLE
 
 -----
-[[top][⬆]]
+[[GNU core utilities][⬆]]
 ** Commands
 #+BEGIN_EXAMPLE
     cp (1)        - copy files and directories
@@ -161,7 +159,7 @@ Debian, Ubuntu, Linux Mint
     sha512sum (1) - compute and check SHA512 message digest
 #+END_EXAMPLE
 -----
-*** dd [[top][⬆]]
+*** dd [[GNU core utilities][⬆]]
 /convert and copy a file/
 
 **** dd: options
@@ -204,7 +202,7 @@ Debian, Ubuntu, Linux Mint
 #+END_EXAMPLE
 
 
-*** ls [[top][⬆]]
+*** ls [[GNU core utilities][⬆]]
 
 : ls [-aAlbBCdDfFghHiIklLmNopqQrRsStTuvwxXZ1] [FILE/DIRECTORY]
 
@@ -239,5 +237,10 @@ Aliases best practice.
 #+END_EXAMPLE
 
 ** Reference
-- Jerry Peek, Shelley Powers, Tim O'Reilly, Mike Loukides. *UNIX Power Tools*. O'reilly
-- Ellen Siever, Stepben Figgins, Robert Love & Arnold Robbins. *Linux In a Nutshell*. O'reilly
+*** Books
+- Jerry Peek, Shelley Powers, Tim O'Reilly, Mike Loukides.
+  *UNIX Power Tools*.
+  O'reilly
+- Ellen Siever, Stepben Figgins, Robert Love & Arnold Robbins.
+  *Linux In a Nutshell*.
+  O'reilly
